--- a/AgendaContatos/app/src/main/AndroidManifest.xml
+++ b/AgendaContatos/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="br.senai.sp.agendacontatos">
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
@@ -18,5 +21,4 @@
         </activity>
         <activity android:name=".Cadastro"></activity>
     </application>
-
 </manifest>
