--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,4 +34,5 @@
                 android:resource="@xml/provider_paths"/>
         </provider>
     </application>
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 </manifest>
